styles/game.css
body {
    background-image: url(../pixel-art_P7_720x448.gif);
    background-size: cover;
    background-position: fixed;
    background-repeat: no-repeat;
    min-width: 100%;
    min-height: 100%;
}

.my_canvas {
    width: 
}

.fish_1 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-90deg);
    animation: swim1 3s ease-in-out infinite;
}

.fish_2 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-30deg);
    animation: swim2 3s ease-in infinite;
}

.fish_3 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-15deg);
    animation: swim3 2s ease-in-out infinite;
}

.fish_4 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-70deg);
    animation: swim4 3s ease-in-out infinite;
}

.fish_5 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-45deg);
    animation: swim5 3s ease-in-out infinite;
}

.fish_6 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-88deg);
    animation: swim6 5s ease-in-out infinite;
}

.fish_7 {
    max-width: 200px;
    max-height: 300px;
    transform: rotate(-5deg);
    animation: swim7 2s ease-in-out infinite;
}



@keyframes swim1 {
    0% {
      transform: translate(0,-400px);
    }
    5% {
      transform: translate(0,-125px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,600px);
    }
}

@keyframes swim2 {
    0% {
      transform: translate(0,-500px);
    }
    5% {
      transform: translate(0,-300px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,100px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,550px);
    }
}

@keyframes swim3 {
    0% {
      transform: translate(0,-500px);
    }
    5% {
      transform: translate(0,-100px);
    }
    10% {
      transform: translate(0,20px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,200px);
    }
    100% {
      transform: translate(0,500px);
    }
}

@keyframes swim4 {
    0% {
      transform: translate(0,-800px);
    }
    5% {
      transform: translate(0,-125px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,600px);
    }
}

@keyframes swim5 {
    0% {
      transform: translate(0,-400px);
    }
    5% {
      transform: translate(0,-125px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,600px);
    }
}

@keyframes swim6 {
    0% {
      transform: translate(0,-400px);
    }
    5% {
      transform: translate(0,-125px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,600px);
    }
}

@keyframes swim7 {
    0% {
      transform: translate(0,-400px);
    }
    5% {
      transform: translate(0,-125px);
    }
    10% {
      transform: translate(0,0px);
    }
    50% {
      transform: translate(0,125px);
      }
    75% {
      transform: translate(0,250px);
    }
    100% {
      transform: translate(0,600px);
    }
      
}

